<resources>
    <string name="app_name">My Application</string>
    <string name="add_pizza_topping">Add Topping</string>
    <string name="clear_pizza_topping">Clear Pizza</string>
    <string name="pizza_checkout">Checkout</string>
    <string name="pizza_delivery">Delivery</string>
    <string name="pizza_image">main_pizza</string>
    <string name="your_order">Your Order</string>
    <string name="base_price">6.5$</string>
    <string name="tv_base_price">Base Price:</string>
    <string name="toppings">Toppings:</string>
    <string name="devlivery_cost">Delivery Cost:</string>
    <string name="total">Total:</string>
    <string name="finish">Finish</string>
</resources>
