<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="212dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/your_order"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/base_price"
        android:layout_width="206dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_base_price"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="57dp"
        android:layout_height="32dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:text="@string/base_price"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/base_price"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="206dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/toppings"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_price" />

    <TextView
        android:id="@+id/tv_topping_value"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tv_toppings_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:inputType="textMultiLine"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="206dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/devlivery_cost"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_toppings_list" />

    <TextView
        android:id="@+id/delivery_cost_value"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tv_toppings_list" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="206dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/total"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tv_total_value"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="80dp"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/delivery_cost_value" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="183dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:text="@string/finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
</androidx.constraintlayout.widget.ConstraintLayout>